--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "browserify index.js -o dist/bundle.js -t [ babelify —presets [ es2015 ] ]",
+    "watch": "watchify index.js -o dist/bundle.js -t [ babelify —presets [ es2015 ] ]"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
-    "babel-jest": "20.0.3",
+    "browserify": "^14.4.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-babel": "^4.1.1",
@@ -20,8 +26,7 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
-    "browserify": "^14.4.0"
+    "watchify": "^3.9.0"
   },
   "dependencies": {},
   "browserify": {
