--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "build": "browserify index.js -o dist/bundle.js -t [ babelify —presets [ es2015 ] ]",
+    "start": "browserify index.js -o dist/bundle.js -t [ babelify —presets [ es2015 ] ]",
     "watch": "watchify index.js -o dist/bundle.js -t [ babelify —presets [ es2015 ] ]"
   },
   "devDependencies": {
